<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="8dp"
    tools:context=".fragment.SortBottomSheetFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sort"
        android:textColor="@color/color_text_main"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sort_cheapest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/sort_cheapest"
        android:textColor="@color/color_text_main"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/sort_fastest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/sort_fastest"
        android:textColor="@color/color_text_main"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/sort_departure_earliest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/sort_departure_earliest"
        android:textColor="@color/color_text_main"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/sort_departure_latest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/sort_departure_latest"
        android:textColor="@color/color_text_main"
        android:textSize="14sp" />

</LinearLayout>